--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,7 @@
     <title>Meu Projeto</title>
 </head>
 <body>
+    <div class="z-10 w-16 h-16 bg-red-500"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
