--- a/src/views/content.html
+++ b/src/views/content.html
@@ -1,8 +1,7 @@
-<div class="w-full h-screen bg-custom-neutral-5 flex items-end justify-center">
+<div class="w-full h-screen flex items-end justify-center">
     <div class="px-4 py-32 flex flex-col items-center justify-end">
         <p class="text-[16px]">the security thats only</p>
         <p class="text-[48px] uppercase">black bank</p>
         <p class="text-[16px]">can offer</p>
     </div>
 </div>
-<div class="w-full h-screen bg-custom-neutral-contrast-5"></div>
