--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,21 +4,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu Projeto</title>
-        <script src="bundle.js"></script>
     </head>
-    <body class="text-custom-neutral-contrast-5" x-data>
+    <body class="bg-custom-neutral-5 text-custom-neutral-contrast-5" x-data>
         <header
-            class="z-10 w-full p-4 fixed uppercase flex items-end justify-between"
+            class="z-10 w-full px-64 py-4 fixed uppercase flex items-end justify-between"
             x-init="fetch('/header.html').then(res => res.text()).then(html => $el.innerHTML = html)">
         </header>
 
         <div
             id="content"
+            class="z-10 w-full px-64 py-4 flex flex-col items-center justify-start"
             x-init="fetch('/content.html').then(res => res.text()).then(html => $el.innerHTML = html)">
         </div>
 
         <footer
-            class="z-10 w-full p-4 fixed uppercase flex items-end justify-between"
+            class="z-10 w-full px-64 py-4 flex items-end justify-between"
             x-init="fetch('/footer.html').then(res => res.text()).then(html => $el.innerHTML = html)">
         </footer>
     </body>
