--- a/src/views/content.html
+++ b/src/views/content.html
@@ -5,3 +5,18 @@
         <p class="text-[16px]">can offer</p>
     </div>
 </div>
+
+<div id="canvas" class="w-full h-screen relative flex items-center justify-center">
+    <div class="absolute w-full h-[32px] flex items-center justify-between">
+        <div class="w-[32px] h-full text-custom-white cursor-pointer left-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"/>
+            </svg>
+        </div>
+        <div class="w-[32px] h-full text-custom-white cursor-pointer right-button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"/>
+            </svg>
+        </div>
+    </div>
+</div>
