--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu Projeto</title>
     </head>
-    <body class="bg-custom-neutral-5 text-custom-neutral-contrast-5" x-data>
+    <body class="bg-custom-neutral-5 text-custom-text" x-data>
         <header
             class="z-10 w-full px-64 py-4 fixed uppercase flex items-end justify-between"
             x-init="fetch('/header.html').then(res => res.text()).then(html => $el.innerHTML = html)">
@@ -13,7 +13,7 @@
 
         <div
             id="content"
-            class="z-10 w-full px-64 py-4 flex flex-col items-center justify-start"
+            class="z-10 w-full px-64 flex flex-col items-center justify-center"
             x-init="fetch('/content.html').then(res => res.text()).then(html => $el.innerHTML = html)">
         </div>
 
