--- a/src/views/content.html
+++ b/src/views/content.html
@@ -1,12 +1,12 @@
-<div class="w-full h-screen flex items-end justify-center">
+<section class="w-full h-screen flex items-end justify-center">
     <div class="px-4 py-32 flex flex-col items-center justify-end">
         <p class="text-[16px]">the security thats only</p>
         <p class="text-[48px] uppercase">black bank</p>
         <p class="text-[16px]">can offer</p>
     </div>
-</div>
+</section>
 
-<div class="w-full h-screen relative flex items-center justify-center">
+<section class="w-full h-screen relative flex items-center justify-center">
     <div class="absolute w-full h-full flex items-center justify-between">
         <div class="w-[32px] h-full flex-none flex items-center justify-center text-custom-white cursor-pointer left-button">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
@@ -23,4 +23,12 @@
             </svg>
         </div>
     </div>
-</div>
+</section>
+
+<section class="w-full h-screen flex items-end justify-center">
+    <div class="px-4 py-32 flex flex-col items-center justify-end">
+        <p class="text-[16px]">the security thats only</p>
+        <p class="text-[48px] uppercase">black bank</p>
+        <p class="text-[16px]">can offer</p>
+    </div>
+</section>
