--- a/src/views/content.html
+++ b/src/views/content.html
@@ -13,8 +13,8 @@
                 <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"/>
             </svg>
         </div>
-        <p class="w-[calc(50%-32px)] h-full flex items-center justify-center text-custom-white cursor-pointer left-button">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta iusto placeat delectus dolores inventore temporibus officia? Obcaecati dolores, necessitatibus non vel cupiditate alias, nemo placeat, nobis quas dolorum harum cum.
+        <p id="card-description" class="w-[calc(50%-32px)] h-full flex items-center justify-center text-custom-white">
+            
         </p>
         <div id="canvas" class="w-[calc(50%-32px)] h-full flex items-center justify-between"></div>
         <div class="w-[32px] h-full flex-none flex items-center justify-center text-custom-white cursor-pointer right-button">
