changed order and cards text

--- a/src/views/carrousel/card0.html
+++ b/src/views/carrousel/card0.html
@@ -1,6 +1,5 @@
 <ul class="flex flex-col items-center justify-center">
-    <li>black card</li>
-    <li>security</li>
-    <li>confiability</li>
-    <li>ensurance</li>
+    <li>The Classic</li>
+    <li>+ insurance</li>
+    <li>+ confiability</li>
 </ul>
