--- a/src/views/carrousel/card1.html
+++ b/src/views/carrousel/card1.html
@@ -1,6 +1,3 @@
 <ul class="flex flex-col items-center justify-center">
-    <li>white card</li>
-    <li>security</li>
-    <li>confiability</li>
-    <li>ensurance</li>
+    <li>The minimalist</li>
 </ul>
