--- a/src/views/carrousel/card2.html
+++ b/src/views/carrousel/card2.html
@@ -1,6 +1,4 @@
 <ul class="flex flex-col items-center justify-center">
-    <li>golden card</li>
-    <li>security</li>
-    <li>confiability</li>
-    <li>ensurance</li>
+    <li>The Midas</li>
+    <li>+ income</li>
 </ul>
