--- a/src/views/carrousel/card3.html
+++ b/src/views/carrousel/card3.html
@@ -1,6 +1,4 @@
 <ul class="flex flex-col items-center justify-center">
-    <li>carmesin card</li>
-    <li>security</li>
-    <li>confiability</li>
-    <li>ensurance</li>
+    <li>The Crimson</li>
+    <li>+ exclusivity</li>
 </ul>
